<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Elder Note</string>
    <string name="action_settings">Settings</string>
    <string name="startTextButtonText">Texto</string>
    <string name="startRecordButtonText">Voz</string>
    <string name="startPlayButtonText">Ouvir</string>
    <string name="stopPlayButtonText">Pausar</string>
    <string name="deleteAnnotationContentButtonText">Deletar</string>
    <string name="recordingSoundTextView">Sua voz está sendo gravada...</string>
    <string name="selectingDescriptionTextView">Selecione uma opção para ajudar a identificar o audio gravado</string>
    <string name="selectionAnnotationTypeTextView">Selecione o tipo de anotação que você deseja criar</string>
    <string name="createAnnotationTextView">Criando uma anotação</string>
    <string name="updateAnnotationTextView">Modificando uma anotação</string>
    <string name="spinnerFistElementText">Todas as atividades</string>
    <string name="titleTextView">Descrição do audio:</string>
    <string name="annotationText">Anotação</string>
    <string name="createNewAnnotation">Criar nova anotação</string>
    <string name="editAnnotation">Alterando anotação</string>
    <string name="saveButtonText">Salvar</string>
    <string name="createAlarmButtonText">Deseja criar um lembrete?</string>
    <string name="editAlarmButtonText">Deseja alterar o lembrete?</string>
    <string name="deleteAlarmButtonText">Deseja apagar o lembrete?</string>
    <string name="editAnnotationButtonText">Deseja alterar a anotação?</string>
    <string name="cancelText">Cancelar</string>
    <string name="deleteAnnotationButtonText">Deletar</string>
    <string name="updateAnnotationButtonText">Atualizar</string>
    <string name="doneText">Feito</string>
    <string name="stopText">Parar</string>
    <string name="editText">Alterar</string>
    <string name="deleteText">Apagar</string>
    <string name="backText">Voltar</string>
    <string name="redoText">Refazer</string>
    <string name="alarmText">"Lembrete"</string>
    <string name="eraseText">Descartar</string>
    <string name="continueText">Continuar</string>
    <string name="createSoundDurantionText">"Duração de: "</string>
    <string name="soundSecondText">"segundo"</string>
    <string name="datePickerSubTitleText">"Definir a data"</string>
    <string name="datePickerMessageText">Selecione o primeiro dia que o alarme irá tocar</string>
    <string name="timePickerSubTitleText">"Definir a hora"</string>
    <string name="timePickerMessageText">Selecione a hora do dia que o alarme irá tocar</string>
    <string name="cycleAlarmDecisionSubTitleText">Repetir o alarme</string>
    <string name="cycleAlarmDecisionMessageText">Deseja que o alarme toque mais de uma vez?</string>
    <string name="cycleAlarmPeriodSubTitleText">Definir o intervalo</string>
    <string name="selectingPeriodTextView">Selecione o intervalo de tempo com que o alarme irá tocar</string>
    <string name="soundTitleTitleText">"Definir descrição"</string>
    <string name="textDialogTitleText">"Digite o texto"</string>
    <string name="speakNowText">"Fale agora"</string>
    <string name="descriptionText">"Descrição"</string>
    <string name="alarmDialogTitleText">"Você possui um lembrete"</string>
    <string name="saveSuccessAnnotationToastText">Anotação salva com sucesso!</string>
    <string name="editSuccessAnnotationToastText">Anotação alterada com sucesso!</string>
    <string name="editSuccessAlarmToastText">Lembrete alterado com sucesso!</string>
    <string name="createSuccessAlarmToastText">Lembrete criado com sucesso!</string>
    <string name="deleteSuccessAnnotationToastText">Anotação apagada com sucesso!</string>
    <string name="deleteSuccessAlarmToastText">Lembrete apagado com sucesso!</string>
    <string name="deleteAnnotationMessageDialogText">Você tem certeza que deseja apagar esta anotação?</string>
    <string name="deleteAlarmMessageDialogText">Você tem certeza que deseja apagar este lembrete?</string>
    <string name="deleteAnnotationContentMessageDialogText">Você tem certeza que deseja apagar este conteúdo?</string>
    <string name="deleteAnnotationTitleDialogText">Apagar anotação</string>
    <string name="deleteAnnotationContentTitleDialogText">Apagar conteúdo</string>
    <string name="deleteAlarmTitleDialogText">Apagar lembrete</string>
    <string name="yesText">Sim</string>
    <string name="noText">Não</string>
    <string name="searchTextViewText">Procurar por:</string>
    <string name="annotationsListTextViewText">Anotações</string>
    <string name="contentTextImageViewAccessibilityText">Anotação de Texto</string>
    <string name="contentSoundImageViewAccessibilityText">Anotação de voz</string>
    <string name="deleteAlarmAccessibilityText">Deletar alarme</string>
    <string name="refreshContentAccessibilityText">Refaz o conteúdo da anotação</string>
    <string name="deleteAnnotationAccessibilityText">Deletar anotação</string>
    <string name="editAnnotationAccessibilityText">Atualizar anotação</string>
    <string name="iconSearchAccessibilityText">procurar</string>
    <string name="emptyTextErroTitleDialogText">Texto em branco</string>
    <string name="emptyTextErroMessageDialogText">Não é possível inserir um texto em branco, por favor tente novamente</string>
    <string name="emptyDescriptionErroTitleDialogText">Descrição em branco</string>
    <string name="emptyDescriptionErroMessageDialogText">Não é possível criar um audio sem a descrição, por favor tente novamente</string>
    <string name="emptyCyclePeriodErroTitleDialogText">Frequência em branco</string>
    <string name="emptyCyclePeriodErroMessageDialogText">Não é possível criar um lembrete sem a frequência, por favor tente novamente</string>
    <string name="emptyContentErroTitleDialogText">Anotação sem conteúdo</string>
    <string name="emptyContentErroMessageDialogText">Não é possível salvar uma anotação sem conteúdo, por favor tente novamente</string>
    <string name="emptyListViewText">Não há anotações</string>
    <string name="alarmAccessibilityText">Alarme</string>
    <string name="cycleAlarmDescriptionText">"Irá tocar "</string>
    <string name="nonCycleAlarmDescriptionText">"Irá tocar apenas uma vez "</string>
    <string name="alarmInDateText">"no dia: "</string>
    <string name="alarmInHourText">" as "</string>
    <string name="nextAlarmDateText">"próximo lembrete "</string>
    <string name="missAlarmDateText">"você perdeu o lembrete: "</string>
    <string name="cyclePeriodEachSixHoursText">"a cada 6 horas"</string>
    <string name="cyclePeriodEachEightHoursText">"a cada 8 horas"</string>
    <string name="cyclePeriodEachTwelveHoursText">"a cada 12 horas"</string>
    <string name="cyclePeriodEverDayText">"1 vez por dia"</string>
    <string name="cyclePeriodEveryOtherDayText">"Dia sim, dia não"</string>
    <string name="cyclePeriodEverWeekText">"1 vez por semana"</string>
    <string name="redoTitleTextView">Refazer:</string>
    <string name="annotationTextView">Anotação:</string>
    <string name="alarmRingtoneDateText">"Agora é hora de: "</string>
    <string name="emptyAlarmText">"Esta anotação não possui lembrete"</string>
    <string name="olderAlarmErroTitleDialogText">"Alarme no passado"</string>
    <string name="olderAlarmErroMessageDialogText">"Não é possível criar um alarme antes da data atual."</string>
    <string name="oldAlarmTitleText">"lembrete antigo"</string>
    <string name="newAlarmTitleText">"Lembrete novo"</string>
    <string name="oldTextTitleText">"Texto antigo"</string>
    <string name="newTextTitleText">"Texto novo"</string>
    <string name="oldSoundTitleText">"Audio antigo: "</string>
    <string name="newSoundTitleText">"Audio novo: "</string>
</resources>
