<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.applications.guilhermeaugusto.eldernote.Activities.MainActivity"
    android:background="#fff2f2f5">

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff2f2f5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createNewAnnotation"
            android:id="@+id/createNewAnnotationButton"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background="@drawable/big_button"
            android:onClick="createNewAnnotationButtonOnClick"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/annotationsListLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/controlsLayout">

        <TextView
            android:id="@+id/annotationsListTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/annotationsListTextViewText"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:gravity="center"
            android:background="#ffd4d5d5" />

        <ListView
            android:id="@+id/annotationsListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView android:id="@+id/emptyAnnotationsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:visibility="visible"
            android:text="@string/emptyListViewText"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</RelativeLayout>
