<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff2f2f5">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:id="@+id/titleMessageTextView"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:gravity="center"
        android:background="#ffd4d5d5"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textMessageTextView"
        android:textSize="22sp"
        android:visibility="visible"
        android:gravity="left"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"/>

    <RelativeLayout
        android:id="@+id/controllerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/red_small_button"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doneText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_centerHorizontal="true"
            android:background="@drawable/small_button"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/green_small_button"
            android:visibility="invisible"/>
    </RelativeLayout>
</LinearLayout>

