<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualizeAnnotationActivity">

    <TextView
        android:id="@+id/annotationTitleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/annotationText"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:gravity="center"
        android:background="#ffd4d5d5"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/soundTitleTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/annotationTitleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/annotationMessageLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_vertical_margin"
        android:paddingBottom="@dimen/layout_vertical_margin"
        android:layout_below="@+id/annotationTitleTextView"
        android:layout_above="@+id/controllerLayout">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/annotationTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:visibility="visible"
                android:background="#00000000"
                android:textSize="25sp"
                android:textIsSelectable="false"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <SeekBar
                android:id="@+id/soundProgressSeekbar"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp"
                android:visibility="invisible"/>

            <Button android:id="@+id/soundPlayingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startPlayButtonText"
                android:onClick="onClick"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="22sp"
                android:background="@drawable/small_button"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/controllerLayout"
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/alarmControllerLayout">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/red_small_button" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/small_button" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/alarmControllerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/backLayout">

        <TextView
            android:id="@+id/alarmTitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarmText"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:gravity="center"
            android:background="#ffd4d5d5"
            android:layout_marginBottom="@dimen/layout_vertical_margin"/>

        <TextView android:id="@+id/alarmCycleDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <TextView android:id="@+id/alarmDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/backLayout"
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/layout_vertical_margin"
        android:paddingTop="@dimen/layout_vertical_margin"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:background="@drawable/small_button" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alarmRingtoneLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@xml/roundedrectangleshape"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alarmRingtoneImageView"
            android:contentDescription="@string/alarmAccessibilityText" />
        </RelativeLayout>
</RelativeLayout>