<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnnotationActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_above="@+id/alarmControllerLayout"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/annotationTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annotationTextView"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/annotationTitleTextView">

                <RelativeLayout
                    android:id="@+id/soundRecordLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:background="@drawable/button_sound">

                    <TextView
                        android:id="@+id/soundRecordTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/startRecordButtonText"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/writeTextLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_text">

                <TextView
                    android:id="@+id/writeTextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startTextButtonText"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"/>
                </RelativeLayout>
            </RelativeLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/annotationTitleTextView">

                <TextView
                    android:id="@+id/annotationTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:visibility="invisible"
                    android:background="#00000000"
                    android:textSize="18sp"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:textIsSelectable="false"/>
            </ScrollView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/annotationTitleTextView">

                <SeekBar
                    android:id="@+id/soundProgressSeekbar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"/>

                <Button android:id="@+id/soundPlayingManageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startPlayButtonText"
                    android:onClick="onClick"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:background="@drawable/small_button"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleTextView"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/alarmControllerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/annotationControllerLayout">

        <Button
            android:id="@+id/createAlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmButtonText"
            android:textSize="22sp"
            android:onClick="onClick"
            android:textStyle="bold"
            android:background="@drawable/big_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/alarmContentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/alarmTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmTitleTextView"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/alarmCycleDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView android:id="@+id/alarmDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/annotationControllerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/red_small_button" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButtonText"
            android:textStyle="bold"
            android:textSize="22sp"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/green_small_button" />
    </RelativeLayout>
</RelativeLayout>